# ckks-runtime

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  architecture.md  comm_interface.hpp  flake.nix  mpi_test.cpp  mpi_test_comm.cpp  operations.hpp  seq_interpreter.hpp  ssa_ops_def.hpp  xmake.lua
api/: mock_api.cpp  mock_api.hpp  mpi_api.cpp  mpi_api.hpp  vec_api.cpp  vec_api.hpp  vec_value.cpp  vec_value.hpp
benchmarks/: mpi_comm_benchmark.cpp
docs/: README.md  architecture.md  communication-design.md  dacapo-runtime-integration.md  dialect-design.md  implementation-status.md  plaintext-testing.md  runtime-design.md  validation-and-errors.md
docs/archive/: architecture-v0.1.md
docs/operator-spec/v1/: schema.json  specification.md
docs/operator-spec/v1/profiles/: README.md  poseidon-ckks-cpu.v1.json  poseidon-ckks-gpu.v1.json
docs/operator-spec/v2/: schema.json  specification.md
docs/operator-spec/v2/profiles/: README.md  dacapo-heaan-cpu.v1.json  dacapo-heaan-gpu.v1.json  dacapo-seal-cpu.v1.json
docs/overview-design/: architecture.md  communication-design.md  dacapo-runtime-integration.md  dialect-design.md  implementation-status.md  plaintext-testing.md  runtime-design.md  validation-and-errors.md
docs/runtime-plan/v1/: compatibility.md  plaintext-bundle.md  plaintext-bundle.schema.json  schema.json  specification.md
docs/runtime-plan/v1/testdata/: README.md  generate.py
docs/runtime-plan/v1/testdata/bundles/v005-demo/: manifest.json
docs/runtime-plan/v1/testdata/invalid/: i001_unknown_format_version.json  i002_float_scale_log2.json  i003_duplicate_value_id.json  i004_comm_list_length_mismatch.json  i005_boot_mode_mismatch.json  i005_unknown_boot_profile.json  i006_boot_target_desc_mismatch.json  i007_use_before_define.json  i008_bad_fingerprint.json  i008_unknown_field.json  i009_place_mismatch.json  i009_unknown_field.json  i010_device_external_input.json  i010_place_mismatch.json  i011_missing_required_key.json  i011_operator_spec_digest_mismatch.json  i012_manifest_digest_mismatch.json  i012_operator_spec_fingerprint_mismatch.json  i013_device_external_input.json  i013_encode_outside_initialization.json  i014_plaintext_bundle_fingerprint_mismatch.json  i014_rotate_normalizes_to_zero.json  i015_unused_value_desc.json
docs/runtime-plan/v1/testdata/valid/: v001_inline_encode_host_compute.json  v001_minimal_single_device.json  v002_device_mul_relin_rescale_rotate.json  v002_mul_rescale_transfer.json  v003_bundle_multi_rank.json  v003_replicate_multi_rank.json  v004_host_boot.json  v004_host_boot_emulation.json  v005_bundle_reuse.json  v005_plaintext_bundle.json  v006_native_boot_device.json
experiments/: dacapo_mlp_experiment.hpp  dacapo_mlp_mpi_isolation.cpp  dacapo_mlp_vec.cpp  dacapo_mlp_vec_e2e.cpp  dacapo_plan_vec_diff.cpp
integrations/dacapo/: README.md  communication-profile.md  generate_mlp_e2e_fixture.py  generate_mlp_gpu_e2e_profiles.py  generate_model_artifacts.py  generate_resnet20_e2e_fixture.py  generate_resnet20_e2e_profiles.py  migrate_profiles.py
runtime/: json_plan_reader.cpp  json_plan_reader.hpp  json_utils.hpp  operator_spec.hpp  operator_spec_reader.cpp  operator_spec_reader.hpp  plaintext_bundle.cpp  plaintext_bundle.hpp  plan.cpp  plan.hpp  runtime.hpp  verifier.cpp  verifier.hpp
runtime/utils/: sha256.cpp  sha256.hpp
testing/: testing.cpp  testing.hpp
tests/: mpi_runtime_test.cpp  runtime_plan_json_tests.cpp  runtime_tests.cpp
tools/: mpi_env_check.cpp
